--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container">
 	  
         <div class="section-title">			
-		  <img src="assets/img/sofianna-img.jpg" alt="" class="img-fluid rounded-circle" style="float:center;width:200px" >
+		  <!--img src="assets/img/sofianna-img.jpg" alt="" class="img-fluid rounded-circle" style="float:center;width:200px"-->
 		  <h2> Μπαλή Σοφιάννα - Βιογραφικό Σημείωμα</h2>
 		  <p> 
 			   <ul>
@@ -79,12 +79,13 @@
 					ηλικία ασχολούμαι ερασιτεχνικά με
 					το χορό, τη ζωγραφική, τη
 					μουσική, το
-					θέατρο. Η ενασχόληση με τον
-					τομέα της προστασίας των
+					θέατρο. Από τα ενδιαφέροντά μου στα
+					νομικά ζητήματα ξεχωριστή θέση κατέχουν ο
+					τομέας της προστασίας των
 					πνευματικών δικαιωμάτων των
-					δημιουργών αποτελεί ένα από
-					τα ενδιαφέροντά μου στα
-					νομικά ζητήματα.</em></p>
+					δημιουργών αλλά και η φιλοσοφία του δικαίου, ενώ τα 
+					ερευνητικά μου ενδιαφέροντα κινούνται γύρω από θέματα 
+					θεωρίας και ιστορίας της τέχνης.</em><p>
  
             </div>
 			
