--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 		  <!--img src="assets/img/sofianna-img.jpg" alt="" class="img-fluid rounded-circle" style="float:center;width:200px"-->
 		  <h2> Μπαλή Σοφιάννα - Βιογραφικό Σημείωμα</h2>
 		  <p> 
-			   <ul>
+			 
 			  <!--li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li-->
-			  <li> <strong>Τηλέφωνο:</strong> <a href="tel:+306974759815	">+30 6974759815</a></li>
-			  <li> <strong>Email:</strong> <a href="mailto:sof_b95@hotmail.com">sof_b95@hotmail.com</a></li>
-			  <li> <strong>Πόλη:</strong> Αθήνα</li>
-			</ul>
+			   <strong>Τηλέφωνο:</strong> <a href="tel:+306974759815	">+30 6974759815</a> |
+			  <strong>Email:</strong> <a href="mailto:sof_b95@hotmail.com">sof_b95@hotmail.com</a> |
+			   <strong>Πόλη:</strong> Αθήνα
+			
 			</p>
           <!--p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p-->
         </div>
