--- a/index.html
+++ b/index.html
@@ -59,17 +59,21 @@
               <!--h4>Σοφιαννα Μπαλη</h4-->
               <p><em>Γεννήθηκα στις 20-03-1995 στην
 					Κέρκυρα όπου και έζησα τα
-					σχολικά μου χρόνια. Από μικρή
-					ηλικία ασχολούμαι ερασιτεχνικά με
+					σχολικά μου χρόνια. 
+					Το ενδιαφέρον μου στα
+					νομικά ζητήματα εκτείνεται σε όλο το φάσμα του δικαίου·
+					ενδεικτικά στην προστασία των ατομικών και κοινωνικών δικαιωμάτων, στην εγκληματολογία, 
+					στο μεταναστευτικό και προσφυγικό δίκαιο, 
+					στο εργατικό δίκαιο, στη βιομηχανική ιδιοκτησία.
+					Ιδιαίτερη, όμως, θέση κατέχει ο
+					τομέας της προστασίας των
+					πνευματικών δικαιωμάτων των δημιουργών.
+					Τα ερευνητικά μου ενδιαφέροντα κινούνται γύρω από θέματα 
+					θεωρίας και ιστορίας της τέχνης και της αρχιτεκτονικής κυρίως του 20ου και του 21ου αιώνα.
+					Από μικρή ηλικία ασχολούμαι ερασιτεχνικά με
 					το χορό, τη ζωγραφική, τη
 					μουσική, το
-					θέατρο. Από τα ενδιαφέροντά μου στα
-					νομικά ζητήματα ξεχωριστή θέση κατέχουν ο
-					τομέας της προστασίας των
-					πνευματικών δικαιωμάτων των
-					δημιουργών αλλά και η φιλοσοφία του δικαίου, ενώ τα 
-					ερευνητικά μου ενδιαφέροντα κινούνται γύρω από θέματα 
-					θεωρίας και ιστορίας της τέχνης.</em><p>
+				    θέατρο. </em><p>
  
             </div>
             <h3 class="resume-title">Εκπαίδευση</h3>
@@ -142,6 +146,10 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Εργασιακή Εμπειρία</h3>
+            <div class="resume-item">
+			<h4>Επιτυχης εξεταση στον Πανελληνιο Διαγωνισμο Υποψηφιων Δικηγορων Α' Εξεταστικης Περιοδου Ετους 2021</h4>
+              <h5>Μάιος - Ιούνιος 2021	</h5>
+            </div>
             <div class="resume-item">
               <h4>ΑΣΚΟΥΜΕΝΗ ΔΙΚΗΓΟΡΟΣ</h4>
               <h5>Μάρτιος 2020 – Σεπτέμβριος 2020</h5>
