--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-  
-   
+
+
 
   <!-- =======================================================
   * Template Name: iPortfolio - v1.4.1
@@ -41,11 +41,11 @@
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
-      <div class="container">	  
-        <div class="section-title">			
+      <div class="container">
+        <div class="section-title">
 		  <!--img src="assets/img/sofianna-img.jpg" alt="" class="img-fluid rounded-circle" style="float:center;width:200px"-->
 		  <h2> Μπαλή Σοφιάννα - Βιογραφικό Σημείωμα</h2>
-		  <p> 
+		  <p>
 			  <!--li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li-->
 			   <strong>Τηλέφωνο:</strong> <a href="tel:+306974759815	">+30 6974759815</a> |
 			  <strong>Email:</strong> <a href="mailto:sof_b95@hotmail.com">sof_b95@hotmail.com</a> |
@@ -57,24 +57,14 @@
             <h3 class="resume-title">Περίληψη</h3>
             <div class="resume-item pb-0">
               <!--h4>Σοφιαννα Μπαλη</h4-->
-              <p><em>Γεννήθηκα στις 20-03-1995 στην
-					Κέρκυρα όπου και έζησα τα
-					σχολικά μου χρόνια. 
-					Το ενδιαφέρον μου στα
-					νομικά ζητήματα εκτείνεται σε όλο το φάσμα του δικαίου·
-					ενδεικτικά στην προστασία των ατομικών και κοινωνικών δικαιωμάτων, στην εγκληματολογία, 
-					στο μεταναστευτικό και προσφυγικό δίκαιο, 
-					στο εργατικό δίκαιο, στη βιομηχανική ιδιοκτησία.
-					Ιδιαίτερη, όμως, θέση κατέχει ο
-					τομέας της προστασίας των
-					πνευματικών δικαιωμάτων των δημιουργών.
-					Τα ερευνητικά μου ενδιαφέροντα κινούνται γύρω από θέματα 
-					θεωρίας και ιστορίας της τέχνης και της αρχιτεκτονικής κυρίως του 20ου και του 21ου αιώνα.
-					Από μικρή ηλικία ασχολούμαι ερασιτεχνικά με
-					το χορό, τη ζωγραφική, τη
-					μουσική, το
-				    θέατρο. </em><p>
- 
+              <p><em>
+                  Νέα δικηγόρος με ενασχόληση με όλο το φάσμα του δικαίου,
+                  με ιδιαίτερο ενδιαφέρον για το δίκαιο της πνευματικής ιδιοκτησίας.
+                  Τα ερευνητικά μου ενδιαφέροντα κινούνται γύρω από τη σχέση δικαίου
+                  και τέχνης καθώς και γύρω από θέματα
+				          θεωρίας και ιστορίας της σύγχρονης τέχνης και αρχιτεκτονικής.
+				      </em><p>
+
             </div>
             <h3 class="resume-title">Εκπαίδευση</h3>
             <div class="resume-item">
@@ -101,7 +91,7 @@
 				   <ul>
 					<li>Αγγλικά</li>
 				  </ul>
-				  <p><em>Michigan Examination for the Certicate of Proficiency in 
+				  <p><em>Michigan Examination for the Certicate of Proficiency in
 				  English (ECPE)</em></p>
 			</div>
 			<div class="resume-item">
@@ -110,7 +100,7 @@
 					<ul>
 					<li>Microsoft Office</li>
 					</ul>
-            </div>	
+            </div>
 			<h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
             <div class="resume-item">
               <h4>Κυκλος ελευθερων μαθηματων δικαστικης γραφολογιας </h4>
@@ -135,7 +125,7 @@
 			<div class="resume-item">
               <h4>Σεμιναριο με τιτλο « Το εγκλημα των αδελφων Παπεν »</h4>
               <h5>Μάιος 2017</h5>
-              <p><em>Εργαστήριο Ποινικών και Εγκληματολογικών Ερευνών του τμήματος 
+              <p><em>Εργαστήριο Ποινικών και Εγκληματολογικών Ερευνών του τμήματος
 					 Νομικής του Πανεπιστημίου Αθηνών σε συνεργασία με το Κέντρο Ψυχαναλυτικών Ερευνών της Αθήνας</em></p>
             </div>
 			<div class="resume-item">
@@ -147,8 +137,21 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Εργασιακή Εμπειρία</h3>
             <div class="resume-item">
-			<h4>Επιτυχης εξεταση στον Πανελληνιο Διαγωνισμο Υποψηφιων Δικηγορων Α' Εξεταστικης Περιοδου Ετους 2021</h4>
-              <h5>Μάιος - Ιούνιος 2021	</h5>
+              <h4>Απογραφεας</h4>
+              <h5>Νοέμβριος - Ιανουάριος 2021	</h5>
+              <p><em> Απογραφέας στη στατιστική εργασία της απογραφής πληθυσμού - κατοικιών 2021, διενεργούμενη από την ΕΛΣΤΑΤ. </em></p>
+            </div>
+            <div class="resume-item">
+			        <h4>Πρακτικη Ασκηση</h4>
+              <h5>Νοέμβριος - Δεκέμβριος 2021	</h5>
+              <p><em>Βοηθός οργάνωσης παραγωγής στην εταιρεία κινηματογραφικών, τηλεοπτικών και μουσικών παραγωγών Laika Productions.
+                Συμμετοχή ως βοηθός παραγωγής σε γύρισμα ταινίας μικρού μήκους και βοήθεια στην προετοιμασία του υλικού και στην έρευνα αρχείων για την παραγωγή ντοκιμαντέρ. </em></p>
+            </div>
+            <div class="resume-item">
+			        <h4>Νεα δικηγορος</h4>
+              <h5>Σεπτέμβριος 2021	</h5>
+              <p><em>Συνεργασία με δικηγορικό γραφείο σε υποθέσεις κυρίως
+                βιομηχανικής ιδιοκτησίας.   </em></p>
             </div>
             <div class="resume-item">
               <h4>ΑΣΚΟΥΜΕΝΗ ΔΙΚΗΓΟΡΟΣ</h4>
@@ -187,7 +190,7 @@
               <h5>Καλοκαίρι 2014</h5>
               <p><em>Δικηγορικό Γραφείο, Κέρκυρα</em></p>
               <ul>
-                <li>Επικουρικές και γραμματειακές εργασίες των κύριων 
+                <li>Επικουρικές και γραμματειακές εργασίες των κύριων
 					τομέων ενασχόλησης του δικηγορικού γραφείου (ποινικό και διοικητικό δίκαιο)</li>
               </ul>
             </div>
