--- a/index.html
+++ b/index.html
@@ -27,14 +27,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-
-
-  <!-- =======================================================
-  * Template Name: iPortfolio - v1.4.1
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -47,25 +39,86 @@
 		  <h2> Μπαλή Σοφιάννα - Βιογραφικό Σημείωμα</h2>
 		  <p>
 			  <!--li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li-->
-			   <strong>Τηλέφωνο:</strong> <a href="tel:+306974759815	">+30 6974759815</a> |
-			  <strong>Email:</strong> <a href="mailto:sof_b95@hotmail.com">sof_b95@hotmail.com</a> |
+			   <strong>Τηλέφωνο:</strong> <a href="tel:+306974759815">+30 6974759815</a> |
+			   <strong>Email:</strong> <a href="mailto:sof_b95@hotmail.com">sof_b95@hotmail.com</a> |
 			   <strong>Πόλη:</strong> Αθήνα
 		  </p>
         </div>
+        <div class="row-lg-6" data-aos="fade-up" data-aos-delay="60">
+          <h3 class="resume-title">Περίληψη</h3>
+          <div class="resume-item pb-0">
+            <p>
+                Νέα δικηγόρος με ενασχόληση με όλο το φάσμα του δικαίου,
+                με ιδιαίτερο ενδιαφέρον για το δίκαιο της πνευματικής ιδιοκτησίας.
+                Τα ερευνητικά μου ενδιαφέροντα κινούνται γύρω από τη σχέση δικαίου
+                και τέχνης καθώς και γύρω από θέματα
+                θεωρίας και ιστορίας της σύγχρονης τέχνης και αρχιτεκτονικής.
+            <p>
+          </div>
+        </div>
         <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Περίληψη</h3>
-            <div class="resume-item pb-0">
-              <!--h4>Σοφιαννα Μπαλη</h4-->
-              <p><em>
-                  Νέα δικηγόρος με ενασχόληση με όλο το φάσμα του δικαίου,
-                  με ιδιαίτερο ενδιαφέρον για το δίκαιο της πνευματικής ιδιοκτησίας.
-                  Τα ερευνητικά μου ενδιαφέροντα κινούνται γύρω από τη σχέση δικαίου
-                  και τέχνης καθώς και γύρω από θέματα
-				          θεωρίας και ιστορίας της σύγχρονης τέχνης και αρχιτεκτονικής.
-				      </em><p>
-
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Εργασιακή Εμπειρία</h3>
+            <div class="resume-item">
+              <h4>Απογραφεας</h4>
+              <h5>Νοέμβριος 2021 - Ιανουάριος 2022	</h5>
+              <p><em> Απογραφέας στη στατιστική εργασία της απογραφής πληθυσμού - κατοικιών 2021, διενεργούμενη από την ΕΛΣΤΑΤ. </em></p>
             </div>
+            <div class="resume-item">
+			        <h4>Πρακτικη Ασκηση</h4>
+              <h5>Νοέμβριος - Δεκέμβριος 2021	</h5>
+              <p><em>Βοηθός οργάνωσης παραγωγής στην εταιρεία κινηματογραφικών, τηλεοπτικών και μουσικών παραγωγών Laika Productions.
+                Συμμετοχή ως βοηθός παραγωγής σε γύρισμα ταινίας μικρού μήκους και βοήθεια στην προετοιμασία του υλικού και στην έρευνα αρχείων για την παραγωγή ντοκιμαντέρ. </em></p>
+            </div>
+            <div class="resume-item">
+			        <h4>Νεα δικηγορος</h4>
+              <h5>Σεπτέμβριος 2021	</h5>
+              <p><em>Συνεργασία με δικηγορικό γραφείο σε υποθέσεις κυρίως
+                βιομηχανικής ιδιοκτησίας.   </em></p>
+            </div>
+            <div class="resume-item">
+              <h4>ΑΣΚΟΥΜΕΝΗ ΔΙΚΗΓΟΡΟΣ</h4>
+              <h5>Μάρτιος 2020 – Σεπτέμβριος 2020</h5>
+              <p><em>Περιφέρεια Αττικής - Αυτοτελές Τμήμα Νομικής Υποστήριξης - Γραφείο Νομοθετικού Συντονισμού και
+					Δικαστικών Υποθέσεων Περιφερειακών Ενοτήτων Πειραιώς και
+					Νήσων  </em></p>
+              <ul>
+                <li>Ενασχόληση με όλο το φάσμα του δικαίου</li>
+				<li>Θέματα διοικητικού δικαίου, δικονομικά ζητήματα (πολεοδομικά, δημόσιες συμβάσεις, τεχνικά έργα)</li>
+				<li>Θέματα εμπορικού και εταιρικού δικαίου (λύση εμπορικών εταιριών) </li>
+				<li>Θέματα εργατικού δικαίου και ευρύτερα θέματα αστικού δικαίου</li>
+				<li>Αναζήτηση κατάλληλης νομολογίας </li>
+				<li>Δυνατότητα σύνταξης νομικών κειμένων</li>
+              </ul>
+			  <h5>Απρίλιος 2019 - Δεκέμβριος 2019</h5>
+			  <p><em>Δικηγορικό Γραφείο, Αθήνα</em></p>
+			  <ul>
+			    <li>Ενασχόληση με όλο το φάσμα του δικαίου </li>
+				<li>Υποθέσεις αστικού, εμπορικού, ποινικού και διοικητικού δικαίου</li>
+                <li>Εξωτερικές εργασίες (κατάθεση-παραλαβή δικογράφων, παρακολούθηση πορείας των υποθέσεων, παρακολούθηση διαδικασίας στα ακροατήρια)</li>
+				<li>Νομική έρευνα - εύρεση νομολογίας </li>
+				<li>Συνδρομή στη σύνταξη δικογράφων </li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Διαχειριση φουαγιε θεατρου</h4>
+              <h5>Νοέμβριος 2018 - Μάρτιος 2019</h5>
+              <p><em>Θέατρο «ΑΓΓΕΛΩΝ ΒΗΜΑ», Τόπος Συνάντησης Ανατολής και Δύσης, Αθήνα</em></p>
+              <ul>
+                <!--li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li-->
+              </ul>
+            </div>
+			<div class="resume-item">
+              <h4>Γραμματειακη Υποστηριξη</h4>
+              <h5>Καλοκαίρι 2014</h5>
+              <p><em>Δικηγορικό Γραφείο, Κέρκυρα</em></p>
+              <ul>
+                <li>Επικουρικές και γραμματειακές εργασίες των κύριων
+					τομέων ενασχόλησης του δικηγορικού γραφείου (ποινικό και διοικητικό δίκαιο)</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
             <h3 class="resume-title">Εκπαίδευση</h3>
             <div class="resume-item">
               <h4>ΘΕΩΡΙΑ ΚΑΙ ΙΣΤΟΡΙΑ ΤΗΣ ΤΕΧΝΗΣ </h4>
@@ -132,67 +185,6 @@
               <h4>Επισκεψη στο Ευρωπαϊκο Κοινοβουλιο</h4>
               <h5>Στρασβούργο, Απρίλιος 2012</h5>
               <p><em>EUROSCOLA</em></p>
-            </div>
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Εργασιακή Εμπειρία</h3>
-            <div class="resume-item">
-              <h4>Απογραφεας</h4>
-              <h5>Νοέμβριος - Ιανουάριος 2021	</h5>
-              <p><em> Απογραφέας στη στατιστική εργασία της απογραφής πληθυσμού - κατοικιών 2021, διενεργούμενη από την ΕΛΣΤΑΤ. </em></p>
-            </div>
-            <div class="resume-item">
-			        <h4>Πρακτικη Ασκηση</h4>
-              <h5>Νοέμβριος - Δεκέμβριος 2021	</h5>
-              <p><em>Βοηθός οργάνωσης παραγωγής στην εταιρεία κινηματογραφικών, τηλεοπτικών και μουσικών παραγωγών Laika Productions.
-                Συμμετοχή ως βοηθός παραγωγής σε γύρισμα ταινίας μικρού μήκους και βοήθεια στην προετοιμασία του υλικού και στην έρευνα αρχείων για την παραγωγή ντοκιμαντέρ. </em></p>
-            </div>
-            <div class="resume-item">
-			        <h4>Νεα δικηγορος</h4>
-              <h5>Σεπτέμβριος 2021	</h5>
-              <p><em>Συνεργασία με δικηγορικό γραφείο σε υποθέσεις κυρίως
-                βιομηχανικής ιδιοκτησίας.   </em></p>
-            </div>
-            <div class="resume-item">
-              <h4>ΑΣΚΟΥΜΕΝΗ ΔΙΚΗΓΟΡΟΣ</h4>
-              <h5>Μάρτιος 2020 – Σεπτέμβριος 2020</h5>
-              <p><em>Περιφέρεια Αττικής - Αυτοτελές Τμήμα Νομικής Υποστήριξης - Γραφείο Νομοθετικού Συντονισμού και
-					Δικαστικών Υποθέσεων Περιφερειακών Ενοτήτων Πειραιώς και
-					Νήσων  </em></p>
-              <ul>
-                <li>Ενασχόληση με όλο το φάσμα του δικαίου</li>
-				<li>Θέματα διοικητικού δικαίου, δικονομικά ζητήματα (πολεοδομικά, δημόσιες συμβάσεις, τεχνικά έργα)</li>
-				<li>Θέματα εμπορικού και εταιρικού δικαίου (λύση εμπορικών εταιριών) </li>
-				<li>Θέματα εργατικού δικαίου και ευρύτερα θέματα αστικού δικαίου</li>
-				<li>Αναζήτηση κατάλληλης νομολογίας </li>
-				<li>Δυνατότητα σύνταξης νομικών κειμένων</li>
-              </ul>
-			  <h5>Απρίλιος 2019 - Δεκέμβριος 2019</h5>
-			  <p><em>Δικηγορικό Γραφείο, Αθήνα</em></p>
-			  <ul>
-			    <li>Ενασχόληση με όλο το φάσμα του δικαίου </li>
-				<li>Υποθέσεις αστικού, εμπορικού, ποινικού και διοικητικού δικαίου</li>
-                <li>Εξωτερικές εργασίες (κατάθεση-παραλαβή δικογράφων, παρακολούθηση πορείας των υποθέσεων, παρακολούθηση διαδικασίας στα ακροατήρια)</li>
-				<li>Νομική έρευνα - εύρεση νομολογίας </li>
-				<li>Συνδρομή στη σύνταξη δικογράφων </li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Διαχειριση φουαγιε θεατρου</h4>
-              <h5>Νοέμβριος 2018 - Μάρτιος 2019</h5>
-              <p><em>Θέατρο «ΑΓΓΕΛΩΝ ΒΗΜΑ», Τόπος Συνάντησης Ανατολής και Δύσης, Αθήνα</em></p>
-              <ul>
-                <!--li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li-->
-              </ul>
-            </div>
-			<div class="resume-item">
-              <h4>Γραμματειακη Υποστηριξη</h4>
-              <h5>Καλοκαίρι 2014</h5>
-              <p><em>Δικηγορικό Γραφείο, Κέρκυρα</em></p>
-              <ul>
-                <li>Επικουρικές και γραμματειακές εργασίες των κύριων
-					τομέων ενασχόλησης του δικηγορικού γραφείου (ποινικό και διοικητικό δίκαιο)</li>
-              </ul>
             </div>
           </div>
         </div>
