--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
             <div class="resume-item">
               <h4>ΘΕΩΡΙΑ ΚΑΙ ΙΣΤΟΡΙΑ ΤΗΣ ΤΕΧΝΗΣ </h4>
               <h5>2018 – σήμερα	</h5>
-              <p><em>Ανώτατη Σχολή Καλών Τεχνών, Αθήνα</em></p>
+              <p><em>Ανωτάτη Σχολή Καλών Τεχνών, Αθήνα</em></p>
               <p>Προπτυχιακή Φοιτήτρια</p>
+	      <p> Παιδαγωγική και διδακτική επάρκεια για το γνωστικό αντικείμενο της ιστορίας της τέχνης <p>
             </div>
             <div class="resume-item">
               <h4>ΝΟΜΙΚΗ ΣΧΟΛΗ</h4>
