--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <h5>2018 – σήμερα	</h5>
               <p><em>Ανωτάτη Σχολή Καλών Τεχνών, Αθήνα</em></p>
               <p>Προπτυχιακή Φοιτήτρια</p>
-	      <p> Παιδαγωγική και διδακτική επάρκεια για το γνωστικό αντικείμενο της ιστορίας της τέχνης <p>
+	      <p> Παιδαγωγική και διδακτική επάρκεια για το μάθημα της ιστορίας της τέχνης <p>
             </div>
             <div class="resume-item">
               <h4>ΝΟΜΙΚΗ ΣΧΟΛΗ</h4>
