--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		  <p>
 			  <!--li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li-->
 			   <strong>Τηλέφωνο:</strong> <a href="tel:+306974759815">+30 6974759815</a> |
-			   <strong>Email:</strong> <a href="mailto:sof_b95@hotmail.com">sof_b95@hotmail.com</a> |
+			   <strong>Email:</strong> <a href="mailto:sofianna.bali@hotmail.com">sofianna.bali@hotmail.com</a> |
 			   <strong>Πόλη:</strong> Αθήνα
 		  </p>
         </div>
