--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h3 class="resume-title">Περίληψη</h3>
           <div class="resume-item pb-0">
             <p>
-                Νέα δικηγόρος με ενασχόληση με όλο το φάσμα του δικαίου,
+                Νέα δικηγόρος με εμπειρία σε όλο το φάσμα του δικαίου,
                 με ιδιαίτερο ενδιαφέρον για το δίκαιο της πνευματικής ιδιοκτησίας.
                 Τα ερευνητικά μου ενδιαφέροντα κινούνται γύρω από τη σχέση δικαίου
                 και τέχνης καθώς και γύρω από θέματα
