--- a/index.html
+++ b/index.html
@@ -48,42 +48,56 @@
           <h3 class="resume-title">Περίληψη</h3>
           <div class="resume-item pb-0">
             <p>
-                Νέα δικηγόρος με εμπειρία σε όλο το φάσμα του δικαίου,
-                με ιδιαίτερο ενδιαφέρον για το δίκαιο της πνευματικής ιδιοκτησίας.
-                Τα ερευνητικά μου ενδιαφέροντα κινούνται γύρω από τη σχέση δικαίου
-                και τέχνης καθώς και γύρω από θέματα
-                θεωρίας και ιστορίας της σύγχρονης τέχνης και αρχιτεκτονικής.
+                Νέα δικηγόρος, παρά Πρωτοδίκαις, με δικαστηριακή και συμβουλευτική εμπειρία σε όλο το φάσμα του δικαίου.
+		Ιδιαίτερο ενδιαφέρον για το δίκαιο της διανοητικής ιδιοκτησίας. 
+		Παράλληλη ακαδημαϊκή ενασχόληση με την ιστορία της τέχνης. 
+		Ερευντικό ενδιαφέρον για τη σχέση δικαίου και σύγχρονης καλλιτεχνικής παραγωγής.
+	      
             <p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Εργασιακή Εμπειρία</h3>
-            <div class="resume-item">
-			        <h4>Πρακτικη Ασκηση</h4>
+		 <div class="resume-item">
+			        <h4>Νέα δικηγόρος</h4>
+              <h5>Ιούλιος 2022 - σήμερα </h5>
+              <p><em>Νομικός συνεργάτης της εταιρείας "MTC –ΜΑΚΕΔΟΝΙΚΗ ΤΕΧΝΙΚΗ ΕΤΑΙΡΕΙΑ".
+                Παροχή ανεξάρτητων υπηρεσιών στα πλαίσια ανάληψης έργου από την εταιρεία "PQH ΕΝΙΑΙΑ ΕΙΔΙΚΗ ΕΚΚΑΘΑΡΙΣΗ Α.Ε." 
+		Διαχείριση δικαιωμάτων υπό εκκαθάριση πιστωτικών ιδρυμάτων. Τμήμα εγγυημένων δανείων.  </em></p>
+	      </div>
+            <div class="resume-item"> 
+		  <div class="resume-item">
+			        <h4>Συμμετοχή στο έργο της ΕΛΣΤΑΤ "Απογραφή Πληθυσμού-Κατοικιών 2021"</h4>
+			  <h5>Νοέμβριος - Φεβρουάριος 2021	</h4>
+            </div>
+            <div class="resume-item"> 
+		  <div class="resume-item">
+			        <h4>Πρακτικη Ασκηση στα πλαίσια φοίτησης στην Ανωτάτη Σχολή Καλών Τεχνών</h4>
               <h5>Νοέμβριος - Δεκέμβριος 2021	</h5>
               <p><em>Βοηθός οργάνωσης παραγωγής στην εταιρεία κινηματογραφικών, τηλεοπτικών και μουσικών παραγωγών Laika Productions.
-                Συμμετοχή ως βοηθός παραγωγής σε γύρισμα ταινίας μικρού μήκους και βοήθεια στην προετοιμασία του υλικού και στην έρευνα αρχείων για την παραγωγή ντοκιμαντέρ. </em></p>
+                Συμμετοχή ως βοηθός παραγωγής σε γύρισμα ταινίας μικρού μήκους.
+		Βοήθεια στην προετοιμασία του υλικού και στην έρευνα ιστορικών αρχείων για την παραγωγή ντοκιμαντέρ. </em></p>
             </div>
             <div class="resume-item">
-			        <h4>Νεα δικηγορος</h4>
-              <h5>Σεπτέμβριος 2021	</h5>
-              <p><em>Συνεργασία με δικηγορικό γραφείο σε υποθέσεις κυρίως
-                βιομηχανικής ιδιοκτησίας.   </em></p>
+			        <h4>Νεα δικηγορος, Αθήνα</h4>
+              <h5>Σεπτέμβριος - Οκτώβριος 2021	</h5>
+              <p><em>Συνεργασία με δικηγορικό γραφείο σε υποθέσεις δημοσίου, εταιρικού δικαίου,
+                βιομηχανικής ιδιοκτησίας. Ενασχόληση με τη βασική νομοθεσία για τα ιατροτεχνολογικά προϊόντα.   </em></p>
             </div>
             <div class="resume-item">
               <h4>ΑΣΚΟΥΜΕΝΗ ΔΙΚΗΓΟΡΟΣ</h4>
               <h5>Μάρτιος 2020 – Σεπτέμβριος 2020</h5>
               <p><em>Περιφέρεια Αττικής - Αυτοτελές Τμήμα Νομικής Υποστήριξης - Γραφείο Νομοθετικού Συντονισμού και
 					Δικαστικών Υποθέσεων Περιφερειακών Ενοτήτων Πειραιώς και
-					Νήσων  </em></p>
+					Νήσων_Παρέχεται συστατική επιστολή κατόπιν σχετικού αιτήματος </em></p>
               <ul>
                 <li>Ενασχόληση με όλο το φάσμα του δικαίου</li>
 				<li>Θέματα διοικητικού δικαίου, δικονομικά ζητήματα (πολεοδομικά, δημόσιες συμβάσεις, τεχνικά έργα)</li>
 				<li>Θέματα εμπορικού και εταιρικού δικαίου (λύση εμπορικών εταιριών) </li>
 				<li>Θέματα εργατικού δικαίου και ευρύτερα θέματα αστικού δικαίου</li>
 				<li>Αναζήτηση κατάλληλης νομολογίας </li>
-				<li>Δυνατότητα σύνταξης νομικών κειμένων</li>
+				<li>Σύνταξης νομικών κειμένων</li>
               </ul>
 			  <h5>Απρίλιος 2019 - Δεκέμβριος 2019</h5>
 			  <p><em>Δικηγορικό Γραφείο, Αθήνα</em></p>
@@ -108,8 +122,8 @@
               <h5>Καλοκαίρι 2014</h5>
               <p><em>Δικηγορικό Γραφείο, Κέρκυρα</em></p>
               <ul>
-                <li>Επικουρικές και γραμματειακές εργασίες των κύριων
-					τομέων ενασχόλησης του δικηγορικού γραφείου (ποινικό και διοικητικό δίκαιο)</li>
+                <li>Γραμματειακή υποστήριξη και επικουρικές, δικαστηριακές εργασίες.
+		    Τομείς εξειδίκευσης του δικηγορικού γραφείου· ποινικό και διοικητικό δίκαιο</li>
               </ul>
             </div>
           </div>
@@ -118,15 +132,13 @@
             <div class="resume-item">
               <h4>ΘΕΩΡΙΑ ΚΑΙ ΙΣΤΟΡΙΑ ΤΗΣ ΤΕΧΝΗΣ </h4>
               <h5>2018 – σήμερα	</h5>
-              <p><em>Ανωτάτη Σχολή Καλών Τεχνών, Αθήνα</em></p>
-              <p>Προπτυχιακή Φοιτήτρια</p>
+		    <p><em>Ανωτάτη Σχολή Καλών Τεχνών, Αθήνα</em></p>
 	      <p> Παιδαγωγική και διδακτική επάρκεια για το μάθημα της ιστορίας της τέχνης <p>
             </div>
             <div class="resume-item">
               <h4>ΝΟΜΙΚΗ ΣΧΟΛΗ</h4>
               <h5>2013 – 2018</h5>
-              <p><em>Εθνικό και Καποδιστριακό Πανεπιστήμιο Αθηνών</em></p>
-              <p>Πτυχίο</p>
+		    <p><em>Εθνικό και Καποδιστριακό Πανεπιστήμιο Αθηνών</em></p>
             </div>
 			<h3 class="resume-title">Δεξιότητες</h3>
             <div class="resume-item">
@@ -151,6 +163,12 @@
 					</ul>
             </div>
 			<h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
+		   </div>
+			<div class="resume-item">
+              <h4>Παρακολούθηση επιστημονικής εκδήλωσης του Οργανισμού Πνευματικής Ιδιοκτησίας</h4>
+              <h5>Οκτώβριος 2022</h5>
+              <p><em>Πνευματική Ιδιοκτησία και Δικαιοσύνη</em></p>
+            </div>
             <div class="resume-item">
               <h4>Κυκλος ελευθερων μαθηματων δικαστικης γραφολογιας </h4>
               <h5>Μάρτιος- Απρίλιος 2018	</h5>
