--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 Νέα δικηγόρος, παρά Πρωτοδίκαις, με δικαστηριακή και συμβουλευτική εμπειρία σε όλο το φάσμα του δικαίου.
 		Ιδιαίτερο ενδιαφέρον για το δίκαιο της διανοητικής ιδιοκτησίας. 
 		Παράλληλη ακαδημαϊκή ενασχόληση με την ιστορία της τέχνης. 
-		Ερευντικό ενδιαφέρον για τη σχέση δικαίου και σύγχρονης καλλιτεχνικής παραγωγής.
+		Ερευνητικό ενδιαφέρον για τη σχέση δικαίου και σύγχρονης καλλιτεχνικής παραγωγής.
 	      
             <p>
           </div>
@@ -60,27 +60,25 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Εργασιακή Εμπειρία</h3>
 		 <div class="resume-item">
-			        <h4>Νέα δικηγόρος</h4>
+			        <h4>Νεα δικηγορος</h4>
               <h5>Ιούλιος 2022 - σήμερα </h5>
               <p><em>Νομικός συνεργάτης της εταιρείας "MTC –ΜΑΚΕΔΟΝΙΚΗ ΤΕΧΝΙΚΗ ΕΤΑΙΡΕΙΑ".
                 Παροχή ανεξάρτητων υπηρεσιών στα πλαίσια ανάληψης έργου από την εταιρεία "PQH ΕΝΙΑΙΑ ΕΙΔΙΚΗ ΕΚΚΑΘΑΡΙΣΗ Α.Ε." 
 		Διαχείριση δικαιωμάτων υπό εκκαθάριση πιστωτικών ιδρυμάτων. Τμήμα εγγυημένων δανείων.  </em></p>
 	      </div>
             <div class="resume-item"> 
-		  <div class="resume-item">
-			        <h4>Συμμετοχή στο έργο της ΕΛΣΤΑΤ "Απογραφή Πληθυσμού-Κατοικιών 2021"</h4>
+			        <h4>Συμμετοχη στο εργο της ΕΛΣΤΑΤ "Απογραφη Πληθυσμου-Κατοικιων 2021"</h4>
 			  <h5>Νοέμβριος - Φεβρουάριος 2021	</h4>
             </div>
-            <div class="resume-item"> 
 		  <div class="resume-item">
-			        <h4>Πρακτικη Ασκηση στα πλαίσια φοίτησης στην Ανωτάτη Σχολή Καλών Τεχνών</h4>
+			        <h4>Πρακτικη Ασκηση στα πλαισια φοιτησης στην Ανωτατη Σχολη Καλων Τεχνων</h4>
               <h5>Νοέμβριος - Δεκέμβριος 2021	</h5>
               <p><em>Βοηθός οργάνωσης παραγωγής στην εταιρεία κινηματογραφικών, τηλεοπτικών και μουσικών παραγωγών Laika Productions.
                 Συμμετοχή ως βοηθός παραγωγής σε γύρισμα ταινίας μικρού μήκους.
 		Βοήθεια στην προετοιμασία του υλικού και στην έρευνα ιστορικών αρχείων για την παραγωγή ντοκιμαντέρ. </em></p>
             </div>
             <div class="resume-item">
-			        <h4>Νεα δικηγορος, Αθήνα</h4>
+			        <h4>Νεα δικηγορος, Αθηνα</h4>
               <h5>Σεπτέμβριος - Οκτώβριος 2021	</h5>
               <p><em>Συνεργασία με δικηγορικό γραφείο σε υποθέσεις δημοσίου, εταιρικού δικαίου,
                 βιομηχανικής ιδιοκτησίας. Ενασχόληση με τη βασική νομοθεσία για τα ιατροτεχνολογικά προϊόντα.   </em></p>
@@ -123,7 +121,7 @@
               <p><em>Δικηγορικό Γραφείο, Κέρκυρα</em></p>
               <ul>
                 <li>Γραμματειακή υποστήριξη και επικουρικές, δικαστηριακές εργασίες.
-		    Τομείς εξειδίκευσης του δικηγορικού γραφείου· ποινικό και διοικητικό δίκαιο</li>
+		    Τομείς εξειδίκευσης του δικηγορικού γραφείου: ποινικό και διοικητικό δίκαιο</li>
               </ul>
             </div>
           </div>
