--- a/index.html
+++ b/index.html
@@ -161,9 +161,8 @@
 					</ul>
             </div>
 			<h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
-		   </div>
-			<div class="resume-item">
-              <h4>Παρακολούθηση επιστημονικής εκδήλωσης του Οργανισμού Πνευματικής Ιδιοκτησίας</h4>
+		 <div class="resume-item">
+              <h4>Παρακολουθηση επιστημονικης εκδηλωσης του Οργανισμου Πνευματικης Ιδιοκτησιας</h4>
               <h5>Οκτώβριος 2022</h5>
               <p><em>Πνευματική Ιδιοκτησία και Δικαιοσύνη</em></p>
             </div>
