--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		Βοήθεια στην προετοιμασία του υλικού και στην έρευνα ιστορικών αρχείων για την παραγωγή ντοκιμαντέρ. </em></p>
             </div>
             <div class="resume-item">
-			        <h4>Νεα δικηγορος, Αθηνα</h4>
+			        <h4>Νεα δικηγορος</h4>
               <h5>Σεπτέμβριος - Οκτώβριος 2021	</h5>
               <p><em>Συνεργασία με δικηγορικό γραφείο σε υποθέσεις δημοσίου, εταιρικού δικαίου,
                 βιομηχανικής ιδιοκτησίας. Ενασχόληση με τη βασική νομοθεσία για τα ιατροτεχνολογικά προϊόντα.   </em></p>
