--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<li>Θέματα εμπορικού και εταιρικού δικαίου (λύση εμπορικών εταιριών) </li>
 				<li>Θέματα εργατικού δικαίου και ευρύτερα θέματα αστικού δικαίου</li>
 				<li>Αναζήτηση κατάλληλης νομολογίας </li>
-				<li>Σύνταξης νομικών κειμένων</li>
+				<li>Σύνταξη νομικών κειμένων</li>
               </ul>
 			  <h5>Απρίλιος 2019 - Δεκέμβριος 2019</h5>
 			  <p><em>Δικηγορικό Γραφείο, Αθήνα</em></p>
