--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+	<style>
+    html, body, #map {
+      background-color: #06283f;
+      width:100%; 
+      height:100%; 
+      padding: 0; 
+      margin: 0;
+  </style>
+	
   <title>Σοφιάννα Μπαλή - Βιογραφικό</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
