--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<style>
     html, body, #map {
-      background-color: #06283f;
+      background-color: #3c3f06;
       width:100%; 
       height:100%; 
       padding: 0; 
