--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
 	<style>
-    html, body, #map {
-      background-color: #3c3f06;
+    html, #map {
+      background-color: #e8f21d;
       width:100%; 
       height:100%; 
       padding: 0; 
