--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
 	<style>
-    html, #map {
-      background-color: #e8f21d;
-      width:100%; 
+    html,  {
+      background-color: #fce40d;
+      width:50%; 
       height:100%; 
       padding: 0; 
       margin: 0;
