--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <!--html lang="en"-->
 
-<head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<style>
-    html,  {
-      background-color: #fce40d;
-      width:50%; 
-      height:100%; 
-      padding: 0; 
-      margin: 0;
-  </style>
+<body style ="backround-colour:yellow:">
+<head>
+</body>
 	
   <title>Σοφιάννα Μπαλή - Βιογραφικό</title>
   <meta content="" name="description">
