--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-<body style ="backround-colour:yellow:">
+<body style ="backround-colour:yellow;">
 <head>
 </body>
 	
