--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+<html>
 <body style ="backround-colour:yellow;">
 <head>
 </body>
+<html>
 	
   <title>Σοφιάννα Μπαλή - Βιογραφικό</title>
   <meta content="" name="description">
