--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-
-<body style ="backround-colour:yellow;">
-
-
-	
+<html>
+<head>
   <title>Σοφιάννα Μπαλή - Βιογραφικό</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-	
-</body> 
+	<style>
+		a{ colour: yellow; }
+		</style?
+		</head>
+		<body>
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
