--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+<html>
+	<body>
   <title>Σοφιάννα Μπαλή - Βιογραφικό</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
