--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h3 class="resume-title">Περίληψη</h3>
           <div class="resume-item pb-0">
             <p>
-                Νέα δικηγόρος, παρά Πρωτοδίκαις, με δικαστηριακή και συμβουλευτική εμπειρία σε όλο το φάσμα του δικαίου.
+                Νέα δικηγόρος, παρά Πρωτοδίκαις, με συμβουλευτική και μικρή δικατηριακή εμπειρία σε όλο το φάσμα του δικαίου.
 		Ιδιαίτερο ενδιαφέρον για το δίκαιο της διανοητικής ιδιοκτησίας. 
 		Παράλληλη ακαδημαϊκή ενασχόληση με την ιστορία της τέχνης. 
 		Ερευνητικό ενδιαφέρον για τη σχέση δικαίου και σύγχρονης καλλιτεχνικής παραγωγής.
@@ -101,7 +101,7 @@
 				<li>Σύνταξη νομικών κειμένων</li>
               </ul>
 			  <h5>Απρίλιος 2019 - Δεκέμβριος 2019</h5>
-			  <p><em>Δικηγορικό Γραφείο, Αθήνα</em></p>
+			  <p><em>Δικηγορικό Γραφείο Αθανασίου Τετώρου και συνεργατών </em></p>
 			  <ul>
 			    <li>Ενασχόληση με όλο το φάσμα του δικαίου </li>
 				<li>Υποθέσεις αστικού, εμπορικού, ποινικού και διοικητικού δικαίου</li>
