--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h3 class="resume-title">Περίληψη</h3>
           <div class="resume-item pb-0">
             <p>
-                Νέα δικηγόρος, παρά Πρωτοδίκαις, με συμβουλευτική και μικρή δικατηριακή εμπειρία σε όλο το φάσμα του δικαίου.
+                Νέα δικηγόρος, παρά Πρωτοδίκαις, με συμβουλευτική και μικρή δικαστηριακή εμπειρία σε όλο το φάσμα του δικαίου.
 		Ιδιαίτερο ενδιαφέρον για το δίκαιο της διανοητικής ιδιοκτησίας. 
 		Παράλληλη ακαδημαϊκή ενασχόληση με την ιστορία της τέχνης. 
 		Ερευνητικό ενδιαφέρον για τη σχέση δικαίου και σύγχρονης καλλιτεχνικής παραγωγής.
