--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <h5>Ιούλιος 2022 - σήμερα </h5>
               <p><em>Νομικός συνεργάτης της εταιρείας "MTC –ΜΑΚΕΔΟΝΙΚΗ ΤΕΧΝΙΚΗ ΕΤΑΙΡΕΙΑ".
                 Παροχή ανεξάρτητων υπηρεσιών στα πλαίσια ανάληψης έργου από την εταιρεία "PQH ΕΝΙΑΙΑ ΕΙΔΙΚΗ ΕΚΚΑΘΑΡΙΣΗ Α.Ε." 
-		Διαχείριση δικαιωμάτων υπό εκκαθάριση πιστωτικών ιδρυμάτων. Τμήμα εγγυημένων δανείων.  </em></p>
+		Eκκαθάριση πιστωτικών ιδρυμάτων.  </em></p>
 	      </div>
             <div class="resume-item"> 
 			        <h4>Συμμετοχη στο εργο της ΕΛΣΤΑΤ "Απογραφη Πληθυσμου-Κατοικιων 2021"</h4>
