--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	      </div>
             <div class="resume-item"> 
 			        <h4>Συμμετοχη στο εργο της ΕΛΣΤΑΤ "Απογραφη Πληθυσμου-Κατοικιων 2021"</h4>
-			  <h5>Νοέμβριος - Φεβρουάριος 2021	</h4>
+			  <h5>Νοέμβριος 2021 - Φεβρουάριος 2022	</h4>
             </div>
 		  <div class="resume-item">
 			        <h4>Πρακτικη Ασκηση στα πλαισια φοιτησης στην Ανωτατη Σχολη Καλων Τεχνων</h4>
