--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h3 class="resume-title">Εργασιακή Εμπειρία</h3>
 		 <div class="resume-item">
 			        <h4>Νεα δικηγορος</h4>
-              <h5>Ιούλιος 2022 - σήμερα </h5>
+              <h5>Ιούλιος 2022 - Δεκέμβριος 2022 </h5>
               <p><em>Νομικός συνεργάτης της εταιρείας "MTC –ΜΑΚΕΔΟΝΙΚΗ ΤΕΧΝΙΚΗ ΕΤΑΙΡΕΙΑ".
                 Παροχή ανεξάρτητων υπηρεσιών στα πλαίσια ανάληψης έργου από την εταιρεία "PQH ΕΝΙΑΙΑ ΕΙΔΙΚΗ ΕΚΚΑΘΑΡΙΣΗ Α.Ε." 
 		Eκκαθάριση πιστωτικών ιδρυμάτων.  </em></p>
