--- a/index.html
+++ b/index.html
@@ -62,14 +62,13 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Εργασιακή Εμπειρία</h3>
 		 <div class="resume-item">
-			  <div class="resume-item">
-			        <h4>Νέα δικηγόρος</h4>
+		 <h4>Νeα δικηγoρος</h4>
 	         <h5> Δεκέμβριος 2021 - σήμερα</h5>
-			   <p><em> Ανάληψη και αυτόνομη διαχείριση νομικών εργασιών.
-				   Ενδεικτικά: συμβουλευτική σε αγοραπωλησία ακινήτων,έρευνα σε υποθηκοφυλακεία,
-				   διαπραγμάτευση σύναψης σύμβασης εκμετάλλευσης έργου πνευματικής ιδιοκτησίας, μετάφραση-επικύρωση εγγράφων. </em></p>
+		   <p><em> Ανάληψη και αυτόνομη διαχείριση νομικών εργασιών.
+		   Ενδεικτικά: συμβουλευτική σε αγοραπωλησία ακινήτων,έρευνα σε υποθηκοφυλακεία,
+		  διαπραγμάτευση σύναψης σύμβασης εκμετάλλευσης έργου πνευματικής ιδιοκτησίας, μετάφραση-επικύρωση εγγράφων. </em></p>
             </div>
-			        <h4>Νεα δικηγορος</h4>
+	        <h4>Νεα δικηγορος</h4>
               <h5>Ιούλιος 2022 - Δεκέμβριος 2022 </h5>
               <p><em>Νομική συνεργάτιδα της εταιρείας "MTC –ΜΑΚΕΔΟΝΙΚΗ ΤΕΧΝΙΚΗ ΕΤΑΙΡΕΙΑ".
                 Παροχή ανεξάρτητων υπηρεσιών στα πλαίσια ανάληψης έργου από την εταιρεία "PQH ΕΝΙΑΙΑ ΕΙΔΙΚΗ ΕΚΚΑΘΑΡΙΣΗ Α.Ε." 
@@ -82,7 +81,7 @@
                 βιομηχανικής ιδιοκτησίας. Ενασχόληση με τη βασική νομοθεσία για τα ιατροτεχνολογικά προϊόντα.   </em></p>
             </div>
 		   <div class="resume-item">
-			        <h4>Άδεια άσκησης δικηγορικού επαγγέλματος</h4>
+			        <h4>Αδεια ασκησης δικηγορικου επαγγελματος</h4>
 	         <h5> Σεπτέμβριος 2021 </h5>
             </div>
 		  
@@ -147,25 +146,31 @@
               <h5>2018 - 2023</h5>
               <p><em>Θεωρία και Ιστορία της Τέχνης</em></p>
             </div>
+		  <div class="resume-item">
 		<h4>ΠΡΑΚΤΙΚΗ ΑΣΚΗΣΗ ΣΕ ΕΤΑΙΡΕΙΑ ΟΠΤΙΚΟΑΚΟΥΣΤΙΚΩΝ ΠΑΡΑΓΩΓΩΝ</h4>
               <h5>Νοέμβριος 2021 - Δεκέμβριος 2021</h5>
               <p><em>Βοηθός οργάνωσης παραγωγής στην εταιρεία κινηματογραφικών, τηλεοπτικών και μουσικών παραγωγών Laika Productions.
 		      Συμμετοχή ως βοηθός παραγωγής σε γύρισμα ταινίας μικρού μήκους. 
 		      Βοήθεια στην προετοιμασία του υλικού και στην έρευνα ιστορικών αρχείων για την παραγωγή ντοκιμαντέρ.</em></p>
             </div>  
+		  <div class="resume-item">
 		<h4>ΘΕΑΤΡΟ "ΑΓΓΕΛΩΝ ΒΗΜΑ"</h4>
               <h5>Νοέμβριος 2018 - Μάρτιος 2019</h5>
               <p><em>Συνεργασία στη λειτουργία του φουαγιέ του θεάτρου.</em></p>
             </div>  
 	      <h3 class="resume-title">Συγγραφή ακαδημαϊκών εργασιών</h3>
 		 <div class="resume-item">
-              <h4>Νομική Σχολή Αθηνών</h4>
-              <h5>Χειμερινό εξάμηνο 2018, Επιβλέπων καθηγητής: Χριστοδούλου Κωνσταντίνος</h5>
+              <h4>Νομικη Σχολη Αθηνων</h4>
+              <h5>Χειμερινό εξάμηνο 2018
+		  Επιβλέπων καθηγητής: Χριστοδούλου Κωνσταντίνος</h5>
               <p><em>"Τα πνευμαιτκά δικαιώματα των φωτογράφων και η έννομη προστασία τους"</em></p>
             </div>
-	      <h5>Χειμερινό εξάμηνο 2018, Επιβλέπουσα καθηγήτρια: Κουφού Αθηνά</h5>
+		  <div class="resume-item">
+	      <h5>Χειμερινό εξάμηνο 2018 
+		  Επιβλέπουσα καθηγήτρια: Κουφού Αθηνά</h5>
               <p><em>"Αρχαιοκαπηλία. Παράνομη διακίνηση και εμπορία πολιτιστικών αγαθών"</em></p>
             </div>
+		  <div class="resume-item">
 	    <h4>ΑΣΚΤ</h4>
               <h5>2018-2023</h5>
               <p><em>Πλήθος εργασιών στα αντικείμενα της φιλοσοφίας και αισθητικής της τέχνης, ιστορίας της τέχνης, αρχιτεκτονικής, φωτογραφίας, παιδαγωγικής. </em></p>
