--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 		   Ενδεικτικά: συμβουλευτική σε αγοραπωλησία ακινήτων,έρευνα σε υποθηκοφυλακεία,
 		  διαπραγμάτευση σύναψης σύμβασης εκμετάλλευσης έργου πνευματικής ιδιοκτησίας, μετάφραση-επικύρωση εγγράφων. </em></p>
             </div>
+		  <div class="resume-item">
 	        <h4>Νεα δικηγορος</h4>
               <h5>Ιούλιος 2022 - Δεκέμβριος 2022 </h5>
               <p><em>Νομική συνεργάτιδα της εταιρείας "MTC –ΜΑΚΕΔΟΝΙΚΗ ΤΕΧΝΙΚΗ ΕΤΑΙΡΕΙΑ".
@@ -110,6 +111,7 @@
               </ul>
             </div>
           </div>
+	       <div class="row">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
             <h3 class="resume-title">Εκπαίδευση</h3>
          
