--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
             </div>
 		
             </div>
-			<h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
+		          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
+           	<h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
 		 <div class="resume-item">
               <h4>Παρακολουθηση επιστημονικης εκδηλωσης του Οργανισμου Πνευματικης Ιδιοκτησιας</h4>
               <h5>Οκτώβριος 2022</h5>
