--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
           <div class="resume-item pb-0">
             <p>
                 Νέα δικηγόρος, παρά Πρωτοδίκαις, με συμβουλευτική και μικρή δικαστηριακή εμπειρία σε όλο το φάσμα του δικαίου.
-		Ιδιαίτερο ενδιαφέρον για το δίκαιο της διανοητικής ιδιοκτησίας, αλλά και επιθυμία για ουσιαστική ενασχόληση
-		με το αστικό, εμπορικό, εργατικό και δίκαιο αλλοδαπών.
-		
+		Ιδιαίτερο ενδιαφέρον για το δίκαιο της διανοητικής ιδιοκτησίας. 
+		Επιθυμία για ουσιαστική ενασχόληση με λοιπούς κλάδους του δικαίου· ενδεικτικά, αστικό, νέες τεχνολογίες, GDPR, εμπορικό, εργατικό, αλλοδαπών.
             <p>
           </div>
         </div>
@@ -177,7 +176,7 @@
             </div>
 		
             </div>
-		          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
+		    <div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
            	<h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
 		 <div class="resume-item">
               <h4>Παρακολουθηση επιστημονικης εκδηλωσης του Οργανισμου Πνευματικης Ιδιοκτησιας</h4>
