--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 		   <div class="resume-item">
 			        <h4>Νεα δικηγορος</h4>
               <h5>Σεπτέμβριος - Οκτώβριος 2021	</h5>
-              <p><em>Συνεργασία με δικηγορικό γραφείο σε υποθέσεις δημοσίου, εταιρικού δικαίου,
+			   <p><em>Δικηγορικό Γραφείο Στέλιου Γκαρίπη </em></p>
+              <p><em>Συνεργασία σε υποθέσεις δημοσίου, εταιρικού δικαίου,
                 βιομηχανικής ιδιοκτησίας. Ενασχόληση με τη βασική νομοθεσία για τα ιατροτεχνολογικά προϊόντα.   </em></p>
             </div>
 		   <div class="resume-item">
@@ -176,6 +177,7 @@
             </div>
 		
             </div>
+		<div class="row">
 		    <div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
            	<h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
 		 <div class="resume-item">
